# crkn-IIIF-presentation-api

./: .dockerignore  .gitignore  Dockerfile  README.md  deployImage.sh  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: master_crkn-iiif-api.yml  master_crkn-iiif-presentation-api.yml  master_crkn-iiif-presentation.yml  master_presentationapi.yml
Azure_auth/: auth.py  jwt_auth.py
api/: annotation.py  annotation_page.py  canvas.py  manifest.py
db_config/: sqlalchemy_async_connect.py
load_testing/: test_files.py
models/data/: presentation_models.py
repository/: annotation.py  annotation_page.py  canvas.py  manifest.py
swift_config/: swift_config.py
utils/: back_task.py  get_manifest_conn.py  lifespan_handler.py  metadata_slug.py  redis.py  settings.py  slug.py  upload_manifest.py  validator.py
utils/schema/: iiif_3_0.json  schemavalidator.py
