[tool.poetry]
name = "presentation api"
version = "0.1.0"
description = ""
authors = ["mary-crkn <mzheng@crkn.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.3"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
aiopg = "^1.4.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
bottle = "^0.12.25"
iiif-prezi = "^0.3.0"
jsonschema = "^4.23.0"
jsonpath-rw = "^1.4.0"
python-swiftclient = "^4.6.0"
aiohttp = "^3.10.11"
fastapi-azure-auth = "^5.0.0"
pydantic-settings = "^2.4.0"
pyjwt = "^2.10.1"
celery = "^5.4.0"
flower = "^2.0.1"
redis = ">=4.0"
aioboto3 = "^13.2.0"
cryptography = "^43.0.1"
starlette = "^0.40.0"
python-multipart = "^0.0.17"


[tool.poetry.group.dev.dependencies]
locust = "^2.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
